[project]
name = "tmx4ml"
version = "0.1.0"
description = "TrackMania Exchange frontend server for ManiaLinks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiodns>=3.2.0",
    "aiohttp>=3.11.16",
    "aiohttp-jinja2>=1.6",
]

[dependency-groups]
dev = [
    "aiohttp-devtools>=1.1.2",
]
